# Polymarket-Auto-Redeemer

./: .env.example  README.md  pyproject.toml  sample_positions.json
src/polymarket_auto_redeemer/: __init__.py  cli.py  config.py  models.py  position_sources.py  redeemer.py
tests/: test_position_sources.py  test_redeemer.py
