[project]
name = "polymarket-auto-redeemer"
version = "0.1.0"
description = "Automated redemption bot for resolved Polymarket positions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Polymarket Auto Redeemer" }]
dependencies = [
  "typer>=0.12.3",
  "web3>=7.0.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
polymarket-auto-redeemer = "polymarket_auto_redeemer.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
